Fixed classes for scrolly animation

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
       <section class="feedback">
         <p class="tests">What Clients Say</p>
         <div class="outerDiv">
-          <div class="card">
+          <div class="card card-1">
             <div class="personDetails">
               <img
                 src="assets/person/person1.png"
@@ -150,7 +150,7 @@
             </div>
             <p>Amazing Work!</p>
           </div>
-          <div class="card">
+          <div class="card card-2">
             <div class="personDetails">
               <img
                 src="assets/person/person2.png"
@@ -165,7 +165,7 @@
             </div>
             <p>Exceeded expectations.</p>
           </div>
-          <div class="card">
+          <div class="card card-3">
             <div class="personDetails">
               <img
                 src="assets/person/person3.png"
@@ -180,7 +180,7 @@
             </div>
             <p>Incredible design sense.</p>
           </div>
-          <div class="card">
+          <div class="card card-4">
             <div class="personDetails">
               <img
                 src="assets/person/person4.png"
@@ -195,7 +195,7 @@
             </div>
             <p>Highly recommended.</p>
           </div>
-          <div class="card">
+          <div class="card card-5">
             <div class="personDetails">
               <img
                 src="assets/person/person5.png"
@@ -210,7 +210,7 @@
             </div>
             <p>Master of the cyberworld.</p>
           </div>
-          <div class="card">
+          <div class="card card-6">
             <div class="personDetails">
               <img
                 src="assets/person/person6.png"
@@ -251,7 +251,7 @@
           <input placeholder="Enter your email" />
           <button>Subscribe</button>
         </form>
-       
+
         <div class="svgs">
           <svg
             width="64"
