--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="main.css" />
   </head>
   <body>
-    <nav class="navbar">
+    <nav class="navbar slideDown">
       <div class="left">
         <a href="#home">Home</a>
         <a href="#projects">Projects</a>
@@ -23,8 +23,12 @@
       </div>
     </nav>
     <div class="main">
-      <h1 class="home">Discover My Work</h1>
-      <img src="assets/mainImage.png" alt="Image of a futuristic city" />
+      <h1 class="home slideDown">Discover My Work</h1>
+      <img
+        class="slideUp"
+        src="assets/mainImage.png"
+        alt="Image of a futuristic city"
+      />
     </div>
     <div class="gallery">
       <div class="item">
